--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'easymoto-builder'
 
 // Include here the subprojects to build
 // e.g.: include 'service-registration'
+include 'service-registration'
