--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'easymoto-builder'
 // Include here the subprojects to build
 // e.g.: include 'service-registration'
 include 'service-registration'
+include 'facade-service'
