--- a/city-catalog/build.gradle
+++ b/city-catalog/build.gradle
@@ -19,7 +19,7 @@ targetCompatibility = 1.8
 dependencies {
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-server', version: '1.4.3.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.5.10.RELEASE'
-    
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.10.RELEASE'
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
