Reverting the last commit which was wrongly merged to master

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,44 @@
-allprojects {
-
-    group = 'com.easymoto'
-
+buildscript {
     repositories {
         mavenCentral()
-        maven {
-            url 'https://repo.spring.io/libs-milestone'
-        }
     }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.0.RELEASE")
+//		classpath("io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE")
+    }
+}
 
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+bootJar {
+    baseName = 'gs-spring-boot'
+    version =  '0.1.0'
+}
+
+repositories {
+    mavenCentral()
+	maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+/*dependencyManagement {
+     imports {
+          mavenBom 'org.springframework.cloud:spring-cloud-aws:2.0.0.M4'
+     }
+}*/
+
+dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web")
+//	compile("org.springframework.boot:spring-boot-starter-actuator")
+//	compile("org.springframework.cloud:spring-cloud-starter-aws")
+    testCompile("junit:junit")
+	testCompile("org.springframework.boot:spring-boot-starter-test")
 }
