#14 Created service and algorithms to calculate the shortest route.

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ rootProject.name = 'easymoto-builder'
 include 'service-registration'
 include 'city-catalog'
 include 'facade-service'
+include 'shortest-route-calculator'
